tests/lean/inductive_cmd_leftover_placeholder_universe.lean.expected.out
inductive_cmd_leftover_placeholder_universe.lean:1:0: error: arg #3 of 'ValueEffect.Effect' contains a non valid occurrence of the datatypes being declared
